applications/proxy/img/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: img-proxy
spec:
  ports:
    - name: app
      port: 80
      protocol: TCP
      targetPort: 2283
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: img-proxy
subsets:
  - addresses:
      - ip: 192.168.178.47
    ports:
      - name: app
        port: 2283
        protocol: TCP
